--- a/views/success.ejs
+++ b/views/success.ejs
@@ -399,6 +399,18 @@
             color: #88266F;
             border-radius: 20%;
         }
+
+        .imgs {
+            display: flex;
+            justify-content: space-around;
+
+        }
+
+        .imgs img {
+            width: 50px;
+            height: 50px;
+            object-fit: contain;
+        }
     </style>
 
 
@@ -452,7 +464,10 @@
             </header>
             <section class="content link_register">
                 <div class="CONGRATULATION">
-                    <img width="50px" height="50px" src="/assest/OLIVE/confirm.png" alt="" srcset="">
+                    <div class="imgs">
+                        <img width="50px" height="50px" src="/assest/OLIVE/confirm.png" alt="" srcset="">
+                        <img src="<%=audition.auditionLogo%> " alt="" srcset="">
+                    </div>
                     <h4>CONGRATULATION</h4>
                     <P>Your Payment is successful.
                     </P>
