--- a/views/userAuditions.ejs
+++ b/views/userAuditions.ejs
@@ -1106,7 +1106,8 @@
                                 checkA.innerHTML = "Date set";
                                 window.location.reload();
                             } else {
-                                err.innerHTML = "error setting date";
+                                err.innerHTML = data.status;
+                                checkA.innerHTML = "submit";
                             }
 
 
@@ -1131,7 +1132,14 @@
                     const seconds = Math.floor((gap % (1000 * 60)) / 1000);
                     const timeLeft = `${days}:days ${hours}:hours ${minute}:minutes ${seconds}:seconds`;
                     count.innerHTML = timeLeft;
-                    console.log(timeLeft)
+                    // if days is 0 
+                    if (days == 0) {
+                        count.innerHTML = `${hours}:hours ${minute}:minutes ${seconds}:seconds`;
+                    }
+                    if (hours == 0) {
+                        count.innerHTML = `${minute}:minutes ${seconds}:seconds`;
+                    }
+
                     if (gap < 0) {
 
                         // stop countdown
